[package]
name = "rhttp"
version = "0.1.0"
authors = ["Dennis Zhang <359845097@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.9"
http = "0.2.2"